--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/setup-node@v3
       - name: install dependencies for css build
         run: yarn install
+      - name: clean css
+        run: rm ./static/css/style.css || echo "existing css file already removed."
       - name: build css
         run: yarn build
       - name: build_and_deploy
