--- a/config.toml
+++ b/config.toml
@@ -50,7 +50,7 @@ url = "@/_index.md"
 
 [[extra.main_menu]]
 name = "resume"
-url = "@/_index.md"
+url = "/files/resume.pdf"
 
 [[extra.main_menu]]
 name = "satire"
