--- a/config.toml
+++ b/config.toml
@@ -7,23 +7,64 @@ compile_sass = true
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = true
 
-theme = "polymathic"
+theme = "zola-bearblog"
 
 [markdown]
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
 
-[extra]
-# Put all your custom variables here
+[translations]
+no_posts = "No posts yet"
+remove_filter = "Remove filter"
+filtering_for = "Filtering for"
+made_with = "Made with"
+table_of_contents = "Table of contents"
+language = "language"
+site = "site"
 
-[extra.poly]
-title="nikhil.nayyar"
-menu_order=[
-    "about/index.md",
-    "blog/_index.md",
-    "musings/_index.md",
-    "resume/index.md",
-    "satire/_index.md",
-    ]
-font_url="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
+[languages.en]
+title = "Nikhil Nayyar"
+description = ""
+
+taxonomies = [
+  { name = "categories", feed = true },
+  { name = "tags", feed = true },
+]
+
+[extra]
+date_format = "%Y-%m-%d"
+webserver_sends_csp_headers = true
+language_switcher = true
+translations = [
+]
+
+[extra.table_of_contents]
+show = false
+max_level = 2
+visible_on_load = false
+
+[[extra.main_menu]]
+name = "home"
+url = "@/_index.md"
+
+[[extra.main_menu]]
+name = "| resume |"
+url = "/files/resume.pdf"
+
+[[extra.main_menu]]
+name = "projects"
+url = "@/projects/index.md"
+
+[[extra.main_menu]]
+name = "satire"
+url = "@/satire/index.md"
+
+[[extra.main_menu]]
+name = "photos"
+url = "@/photos/index.md"
+
+
+[[extra.main_menu]]
+name = "blog"
+url = "@/blog/index.md"
