--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/zola-bearblog"]
 	path = themes/zola-bearblog
 	url = https://codeberg.org/alanpearce/zola-bearblog
+[submodule "quickstart/themes/hugo-theme-console"]
+	path = quickstart/themes/hugo-theme-console
+	url = https://github.com/mrmierzejewski/hugo-theme-console.git
