--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,6 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          # TOKEN: ${{ secrets.TOKEN }}
+          github_token: ${{ secrets.TOKEN }}
+          # TOKEN: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
