--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://nikhil-nayyar.github.io'
+baseURL = 'https://nikhil-nayyar.github.io'
 languageCode = 'en-us'
 title = 'nikhil-nayyar.net'
 theme = 'hugo-theme-console'
